<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.piestack.uxchallenge.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_missions"
        android:name="io.piestack.uxchallenge.ui.missions.MissionsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_missions" />

    <fragment
        android:id="@+id/navigation_bookings"
        android:name="io.piestack.uxchallenge.ui.bookings.BookingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_bookings" />
</navigation>