<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.missions.MissionsFragment">

        <TextView
            android:id="@+id/tv_title_missions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="@dimen/margin_medium"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium"
            android:text="@string/title_missions"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorBlack"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/avatar_profile_height_icon"
            android:layout_height="@dimen/avatar_profile_height_icon"
            android:layout_margin="@dimen/margin_medium"
            android:src="@drawable/avatar_1"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_missions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title_missions" />

        <ImageView
            android:id="@+id/online"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@drawable/circle_green"
            android:contentDescription="@string/online_status"
            app:layout_constraintCircle="@id/profile_image"
            app:layout_constraintCircleAngle="140"
            app:layout_constraintCircleRadius="20dp"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:paddingStart="6dp"
            android:paddingLeft="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_missions"
            app:tabIndicatorHeight="0dp"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/colorBlack"
            app:tabTextAppearance="@style/TabText"
            app:tabTextColor="@color/colorLightGray"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_nearby" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_newly_listed" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_applied" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_this_week" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_missions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/item_mission"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>