<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/avatar_profile_height"
            android:layout_height="@dimen/avatar_profile_height"
            android:layout_marginTop="@dimen/margin_medium"
            android:src="@drawable/avatar_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/online"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@drawable/circle_green"
            android:contentDescription="@string/online_status"
            app:layout_constraintCircle="@id/profile_image"
            app:layout_constraintCircleAngle="140"
            app:layout_constraintCircleRadius="@dimen/avatar_profile_radius"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorBlack"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image" />

        <Button
            android:id="@+id/button_home"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            android:paddingBottom="@dimen/margin_normal"
            android:text="@string/available"
            android:textAllCaps="false"
            android:textColor="@color/colorGreen"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            app:rippleColor="@color/colorGreenRipple" />

        <TextView
            android:id="@+id/tv_title_hero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/hero_academy"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_home" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_hero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/margin_normal"
            app:cardElevation="@dimen/margin_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_hero">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Media -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:contentDescription="@string/teamwork_media"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/hands" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/hero_description"
                        android:textAlignment="center"
                        android:textColor="@color/colorLightGray" />

                    <Button
                        android:id="@+id/btn_launch_hero"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:text="@string/launch_hero_academy"
                        android:textAllCaps="false"
                        android:textColor="@color/colorRed"
                        android:textStyle="bold"
                        app:icon="@drawable/ic_right" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_title_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/new_messages"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_hero" />

        <TextView
            android:id="@+id/tv_unread_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/margin_normal"
            android:background="@drawable/lable_red"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="2dp"
            android:paddingEnd="@dimen/margin_normal"
            android:paddingBottom="2dp"
            android:text="@string/unread_count"
            android:textColor="@color/colorWhite"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_messages"
            app:layout_constraintLeft_toRightOf="@id/tv_title_messages"
            app:layout_constraintTop_toTopOf="@id/tv_title_messages" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="@dimen/margin_normal"
            app:cardElevation="@dimen/margin_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_messages">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_medium"
                android:paddingBottom="@dimen/margin_medium"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2"
                tools:listitem="@layout/item_chat" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_title_bookings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/outstanding_bookings"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_messages" />

        <TextView
            android:id="@+id/tv_bookings_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginLeft="@dimen/margin_normal"
            android:background="@drawable/lable_red"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="2dp"
            android:paddingEnd="@dimen/margin_normal"
            android:paddingBottom="2dp"
            android:text="@string/bookings_count"
            android:textColor="@color/colorWhite"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_bookings"
            app:layout_constraintLeft_toRightOf="@id/tv_title_bookings"
            app:layout_constraintTop_toTopOf="@id/tv_title_bookings" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_bookings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_bookings"
            tools:itemCount="2"
            tools:listitem="@layout/item_booking" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>