<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.bookings.BookingsFragment">

        <TextView
            android:id="@+id/tv_title_bookings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="@dimen/margin_medium"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium"
            android:text="@string/title_bookings"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorBlack"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/avatar_profile_height_icon"
            android:layout_height="@dimen/avatar_profile_height_icon"
            android:layout_margin="@dimen/margin_medium"
            android:src="@drawable/avatar_1"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_bookings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_title_bookings" />

        <ImageView
            android:id="@+id/online"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@drawable/circle_green"
            android:contentDescription="@string/online_status"
            app:layout_constraintCircle="@id/profile_image"
            app:layout_constraintCircleAngle="140"
            app:layout_constraintCircleRadius="20dp"
            tools:ignore="MissingConstraints" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/avatar_profile_height_icon"
            android:layout_height="@dimen/avatar_profile_height_icon"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@drawable/circle_red"
            android:src="@drawable/ic_round_add"
            android:padding="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="@id/profile_image"
            app:layout_constraintEnd_toStartOf="@id/profile_image"
            app:layout_constraintTop_toTopOf="@id/profile_image" />

        <TextView
            android:id="@+id/tv_title_outstanding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/outstanding_bookings"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_bookings" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_bookings_outstanding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_outstanding"
            tools:itemCount="1"
            tools:listitem="@layout/item_booking" />

        <TextView
            android:id="@+id/tv_title_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/upcoming_bookings"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_bookings_outstanding" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_bookings_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_upcoming"
            tools:itemCount="2"
            tools:listitem="@layout/item_booking" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>