<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="@dimen/margin_normal"
    app:cardElevation="@dimen/margin_normal"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_large">

        <TextView
            android:id="@+id/tv_title_mission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Teach me to cook" />

        <TextView
            android:id="@+id/tv_description_mission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:text="@string/mission_description"
            android:textColor="@color/colorLightGray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_title_mission"
            app:layout_constraintTop_toBottomOf="@id/tv_title_mission" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_icon1"
            android:layout_width="@dimen/avatar_profile_height_icon"
            android:layout_height="@dimen/avatar_profile_height_icon"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:src="@drawable/avatar_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description_mission" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_icon2"
            android:layout_width="@dimen/avatar_profile_height_icon"
            android:layout_height="@dimen/avatar_profile_height_icon"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:src="@drawable/avatar_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_icon1" />

        <TextView
            android:id="@+id/tv_icon_description1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="@dimen/margin_xxlarge"
            android:paddingRight="@dimen/margin_xxlarge"
            android:text="@string/mission_date"
            android:textColor="@color/colorGray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/profile_icon1"
            app:layout_constraintStart_toEndOf="@id/profile_icon1"
            app:layout_constraintTop_toTopOf="@id/profile_icon1" />

        <TextView
            android:id="@+id/tv_icon_description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="@dimen/margin_xxlarge"
            android:paddingRight="@dimen/margin_xxlarge"
            android:text="@string/mission_location"
            android:textColor="@color/colorGray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/profile_icon2"
            app:layout_constraintStart_toEndOf="@id/profile_icon2"
            app:layout_constraintTop_toTopOf="@id/profile_icon2" />

        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_card"
            android:background="@drawable/label_blue"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:paddingEnd="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal"
            android:paddingBottom="2dp"
            android:text="@string/applied"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>